<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#262730">


    <ImageView
        android:id="@+id/imagen_perfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_profile"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_mask"
        android:clipToOutline="true"
        android:contentDescription="@string/perfil_imagen"/>


    <TextView
        android:id="@+id/nombre_alumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_alumno"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#FFFFFF"/>


    <TextView
        android:id="@+id/gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_alumno"
        android:textSize="14dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:textColor="#FFFFFF"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_background"
        android:layout_marginTop="16dp"
        android:gravity="center">


        <TextView
            android:id="@+id/informacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/informacion_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/informacion_descripcion"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_background"
        android:layout_marginTop="16dp"
        android:gravity="center">


        <TextView
            android:id="@+id/experiencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experiencia"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/experiencia_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/experiencia_descripcion"
            android:gravity="center"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp">

        <ImageView android:id="@+id/icono_instagram"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ig"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/instagram_icon"/>

        <ImageView android:id="@+id/icono_github"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/github"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/github_icon"/>

        <ImageView android:id="@+id/icono_linkedin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/linkedin"
            android:contentDescription="@string/linkedin_icon"/>
    </LinearLayout>

</LinearLayout>
